@@ -165,3 +165,5 @@ IND.Tech!$AJ$93:$DC$93	[:sheet_reference, "IND.Tech", [:area, "$AJ$93", "$DC$93"
 IFERROR((IND.Tech!$AJ$94:$DC$94=$F$31)*(IND.Tech!$AJ$93:$DC$93=F$32)*(IND.Tech!$AI$94:$AI$253=$C33&$A$1&$E33)*(IND.Tech!$AJ$94:$DC$253),0)	[:function, "IFERROR", [:arithmetic, [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AJ$94", "$DC$94"]], [:comparator, "="], [:cell, "$F$31"]]], [:operator, "*"], [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AJ$93", "$DC$93"]], [:comparator, "="], [:cell, "F$32"]]], [:operator, "*"], [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AI$94", "$AI$253"]], [:comparator, "="], [:string_join, [:cell, "$C33"], [:cell, "$A$1"], [:cell, "$E33"]]]], [:operator, "*"], [:brackets, [:sheet_reference, "IND.Tech", [:area, "$AJ$94", "$DC$253"]]]], [:number, "0"]]
 SUM(IFERROR((IND.Tech!$AJ$94:$DC$94=$F$31)*(IND.Tech!$AJ$93:$DC$93=F$32)*(IND.Tech!$AI$94:$AI$253=$C33&$A$1&$E33)*(IND.Tech!$AJ$94:$DC$253),0))	[:function, "SUM", [:function, "IFERROR", [:arithmetic, [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AJ$94", "$DC$94"]], [:comparator, "="], [:cell, "$F$31"]]], [:operator, "*"], [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AJ$93", "$DC$93"]], [:comparator, "="], [:cell, "F$32"]]], [:operator, "*"], [:brackets, [:comparison, [:sheet_reference, "IND.Tech", [:area, "$AI$94", "$AI$253"]], [:comparator, "="], [:string_join, [:cell, "$C33"], [:cell, "$A$1"], [:cell, "$E33"]]]], [:operator, "*"], [:brackets, [:sheet_reference, "IND.Tech", [:area, "$AJ$94", "$DC$253"]]]], [:number, "0"]]]
 
+# Parses percent suffixes
+ROUND(24.35,0)%	[:percentage, [:function, "ROUND", [:number, "24.35"], [:number, "0"]]]
